# dic

./: data.json  pyproject.toml
src/dictionary_cli/: __main__.py  altervista.py  cli.py
