[tool.poetry]
name = "dictionary-cli"
description = "📖Get definitions of words from dictionary.com in your terminal, with rich output."
authors = ["Nick <ufohighway@protonmail.com>"]
version = "0.1.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ghostofpokemon/dic"
repository = "https://github.com/ghostofpokemon/dic"
keywords = ["define", "dictionary", "meaning", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/ghostofpokemon/dic/releases"
Source = "https://github.com/ghostofpokemon/dic"
"Bug Tracker" = "https://github.com/ghostofpokemon/dic/issues"

[tool.poetry.dependencies]
python = "^3.11"
gazpacho = "^1.1"
requests = "^2.31.0"
rich = "^13.4.2"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"
importlib_metadata = "^5.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[tool.poetry.scripts]
dic = "dictionary_cli.__main__:cli"

[tool.black]
includes = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
